apps/admin/deploy/kubernetes/web/gaia-x-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaia-x-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.gaia-x.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gaia-x-web
            port:
              number: 8080
